--- a/Graph_temp.ipynb
+++ b/Graph_temp.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "9a637d89-88bc-40ca-b731-9ae2a33b172e",
    "metadata": {
     "tags": []
@@ -114,10 +114,10 @@
     {
      "data": {
       "text/plain": [
-       "<mplcursors._mplcursors.Cursor at 0x23683f34220>"
+       "<mplcursors._mplcursors.Cursor at 0x23683f8d390>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -134,7 +134,7 @@
    ],
    "source": [
     "import numpy as np\n",
-    "import mpl_interactions.ipyplot as iplt\n",
+    "import mplcursors\n",
     "\n",
     "x= np.linspace(0,10,100)\n",
     "\n",
